--- a/src/Dyoub.App/Dyoub.App.csproj
+++ b/src/Dyoub.App/Dyoub.App.csproj
@@ -156,6 +156,9 @@
     <EmbeddedResource Include="Data\Migrations\201704211808536_CreateFixedExpense.resx">
       <DependentUpon>201704211808536_CreateFixedExpense.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Data\Migrations\201704221401350_CreateOtherCashActivity.resx">
+      <DependentUpon>201704221401350_CreateOtherCashActivity.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Infrastructure\Mail\LocalMail.html" />
     <EmbeddedResource Include="Infrastructure\Logging\LocalLog.html" />
     <Content Include="Scripts\controllers\account\dashboard\commercial-overview.controller.js" />
@@ -179,6 +182,9 @@
     <Content Include="Scripts\controllers\financial\fixed-expenses\fixed-expense-details.controller.js" />
     <Content Include="Scripts\controllers\financial\fixed-expenses\fixed-expense-edit.controller.js" />
     <Content Include="Scripts\controllers\financial\fixed-expenses\fixed-expense-list.controller.js" />
+    <Content Include="Scripts\controllers\financial\other-cash-activities\other-cash-activity-details.controller.js" />
+    <Content Include="Scripts\controllers\financial\other-cash-activities\other-cash-activity-edit.controller.js" />
+    <Content Include="Scripts\controllers\financial\other-cash-activities\other-cash-activity-list.controller.js" />
     <Content Include="Scripts\controllers\manage\stores\store-edit.controller.js" />
     <Content Include="Scripts\controllers\manage\stores\store-list.controller.js" />
     <Content Include="Scripts\controllers\commercial\customers\customer-details.controller.js" />
@@ -197,6 +203,7 @@
     <Content Include="Scripts\services\commercial\payment-method-fee.service.js" />
     <Content Include="Scripts\services\commercial\payment-method.service.js" />
     <Content Include="Scripts\services\financial\fixed-expense.service.js" />
+    <Content Include="Scripts\services\financial\other-cash-activites.service.js" />
     <Content Include="Scripts\services\manage\store.service.js" />
     <Content Include="Scripts\services\commercial\customer.service.js" />
     <Content Include="Web.config" />
@@ -213,6 +220,7 @@
     <Compile Include="Controllers\Catalog\ServicesController.cs" />
     <Compile Include="Controllers\Commercial\PaymentMethodsController.cs" />
     <Compile Include="Controllers\Financial\FixedExpensesController.cs" />
+    <Compile Include="Controllers\Financial\OtherCashActivitiesController.cs" />
     <Compile Include="Controllers\Manage\StoresController.cs" />
     <Compile Include="Controllers\PortfolioController.cs" />
     <Compile Include="Controllers\Commercial\CustomersController.cs" />
@@ -274,6 +282,10 @@
     <Compile Include="Data\Migrations\201704211808536_CreateFixedExpense.Designer.cs">
       <DependentUpon>201704211808536_CreateFixedExpense.cs</DependentUpon>
     </Compile>
+    <Compile Include="Data\Migrations\201704221401350_CreateOtherCashActivity.cs" />
+    <Compile Include="Data\Migrations\201704221401350_CreateOtherCashActivity.Designer.cs">
+      <DependentUpon>201704221401350_CreateOtherCashActivity.cs</DependentUpon>
+    </Compile>
     <Compile Include="Extensions\ControllerExtensions.cs" />
     <Compile Include="Extensions\EnumarableExtensions.cs" />
     <Compile Include="Extensions\HttpContextBaseExtension.cs" />
@@ -332,6 +344,9 @@
     <Compile Include="Models\EntityModel\Financial\FixedExpenses\FixedExpenseMapping.cs" />
     <Compile Include="Models\EntityModel\Financial\FixedExpenses\FixedExpenseQuery.cs" />
     <Compile Include="Models\EntityModel\Financial\Money.cs" />
+    <Compile Include="Models\EntityModel\Financial\OtherCashActivities\OtherCashActivity.cs" />
+    <Compile Include="Models\EntityModel\Financial\OtherCashActivities\OtherCashActivityMapping.cs" />
+    <Compile Include="Models\EntityModel\Financial\OtherCashActivities\OtherCashActivityQuery.cs" />
     <Compile Include="Models\EntityModel\Financial\Period\DailyPeriod.cs" />
     <Compile Include="Models\EntityModel\Financial\Period\MonthlyPeriod.cs" />
     <Compile Include="Models\EntityModel\Manage\Stores\Store.cs" />
@@ -394,6 +409,10 @@
     <Compile Include="Models\ViewModel\Financial\FixedExpenses\FixedExpenseIdViewModel.cs" />
     <Compile Include="Models\ViewModel\Financial\FixedExpenses\ListFixedExpensesViewModel.cs" />
     <Compile Include="Models\ViewModel\Financial\FixedExpenses\UpdateFixedExpenseViewModel.cs" />
+    <Compile Include="Models\ViewModel\Financial\OtherCashActivities\CreateOtherCashActivityViewModel.cs" />
+    <Compile Include="Models\ViewModel\Financial\OtherCashActivities\ListOtherCashActivitiesViewModel.cs" />
+    <Compile Include="Models\ViewModel\Financial\OtherCashActivities\OtherCashActivityIdViewModel.cs" />
+    <Compile Include="Models\ViewModel\Financial\OtherCashActivities\UpdateOtherCashActivityViewModel.cs" />
     <Compile Include="Models\ViewModel\Manage\Stores\CreateStoreViewModel.cs" />
     <Compile Include="Models\ViewModel\Manage\Stores\ListStoresViewModel.cs" />
     <Compile Include="Models\ViewModel\Manage\Stores\StoreIdViewModel.cs" />
@@ -426,6 +445,8 @@
     <Compile Include="Results\Common\UnauthorizedStatusCode.cs" />
     <Compile Include="Results\Financial\FixedExpenses\FixedExpenseJson.cs" />
     <Compile Include="Results\Financial\FixedExpenses\FixedExpenseListJson.cs" />
+    <Compile Include="Results\Financial\OtherCashActivities\OtherCashActivityJson.cs" />
+    <Compile Include="Results\Financial\OtherCashActivities\OtherCashActivityListJson.cs" />
     <Compile Include="Results\Manage\Stores\StoreJson.cs" />
     <Compile Include="Results\Manage\Stores\StoreListJson.cs" />
     <Compile Include="Results\Commercial\Customers\CustomerJson.cs" />
@@ -488,6 +509,10 @@
     <Content Include="Views\Financial\FixedExpenses\FixedExpenseEdit.cshtml" />
     <Content Include="Views\Financial\FixedExpenses\FixedExpenseList.cshtml" />
     <Content Include="Views\Financial\FixedExpenses\_RemoveFixedExpense.cshtml" />
+    <Content Include="Views\Financial\OtherCashActivities\_RemoveOtherCashActivity.cshtml" />
+    <Content Include="Views\Financial\OtherCashActivities\OtherCashActivityDetails.cshtml" />
+    <Content Include="Views\Financial\OtherCashActivities\OtherCashActivityEdit.cshtml" />
+    <Content Include="Views\Financial\OtherCashActivities\OtherCashActivityList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
