--- a/src/Dyoub.Test/Dyoub.Test.csproj
+++ b/src/Dyoub.Test/Dyoub.Test.csproj
@@ -145,9 +145,15 @@
     <Compile Include="Contexts\Financial\FixedExpenses\FindFixedExpenseContext.cs" />
     <Compile Include="Contexts\Financial\FixedExpenses\ListFixedExpensesContext.cs" />
     <Compile Include="Contexts\Financial\FixedExpenses\UpdateFixedExpenseContext.cs" />
+    <Compile Include="Contexts\Financial\OtherCashActivities\CreateOtherCashActivityContext.cs" />
+    <Compile Include="Contexts\Financial\OtherCashActivities\DeleteOtherCashActivityContext.cs" />
+    <Compile Include="Contexts\Financial\OtherCashActivities\FindOtherCashActivityContext.cs" />
+    <Compile Include="Contexts\Financial\OtherCashActivities\ListOtherCashActivityContext.cs" />
+    <Compile Include="Contexts\Financial\OtherCashActivities\UpdateOtherCashActivityContext.cs" />
     <Compile Include="Contexts\Manage\Stores\CreateStoreContext.cs" />
     <Compile Include="Contexts\Manage\Stores\DeleteStoreContext.cs" />
     <Compile Include="Contexts\Manage\Stores\DeleteStoreWithFixedExpensesContext.cs" />
+    <Compile Include="Contexts\Manage\Stores\DeleteStoreWithOtherCashActivitiesContext.cs" />
     <Compile Include="Contexts\Manage\Stores\FindStoreContext.cs" />
     <Compile Include="Contexts\Manage\Stores\ListStoreContext.cs" />
     <Compile Include="Contexts\Manage\Stores\UpdateStoreContext.cs" />
@@ -162,7 +168,8 @@
     <Compile Include="Controllers\Catalog\ProductsControllerTest.cs" />
     <Compile Include="Controllers\Catalog\ServicesControllerTest.cs" />
     <Compile Include="Controllers\Commercial\PaymentMethodsControllerTest.cs" />
-    <Compile Include="Controllers\Financial\FixedExpenses\FixedExpensesControllerTest.cs" />
+    <Compile Include="Controllers\Financial\FixedExpensesControllerTest.cs" />
+    <Compile Include="Controllers\Financial\OtherCashActivitiesControllerTest.cs" />
     <Compile Include="Controllers\Manage\StoresControllerTest.cs" />
     <Compile Include="Controllers\Commercial\CustomersControllerTest.cs" />
     <Compile Include="Factories\Account\PasswordRecoveryFactory.cs" />
@@ -173,6 +180,7 @@
     <Compile Include="Factories\Catalog\ServicePriceFactory.cs" />
     <Compile Include="Factories\Commercial\PaymentMethodFactory.cs" />
     <Compile Include="Factories\Financial\FixedExpenseFactory.cs" />
+    <Compile Include="Factories\Financial\OtherCashActivityFactory.cs" />
     <Compile Include="Factories\Manage\StoreFactory.cs" />
     <Compile Include="Factories\Manage\TeamFactory.cs" />
     <Compile Include="Factories\Manage\TeamMemberFactory.cs" />
